I changed so many things but not myself

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<button id="apibutton">Search</button> -->
 						<div class="col-6 col-12-xsmall">
 							<input type="text" name="demo-name" id="groce" value="" placeholder="GROCERY ITEM" />
-							<button class="spillo button icon solid fa-search">Search</button>
+							<button id="cercami" class="spillo button icon solid fa-search">Search</button>
 						</div>
 
 
@@ -81,11 +81,11 @@
 							
 							<!-- in ititles ho le immagini -->
 							<section class="tiles">
-								<article class="style1">
+								<article class="">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-1"  src="" alt="" />
 									</span>
-									<a href="">
+									<a class="portamivia-1"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -94,9 +94,9 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-2"  src="" alt="" />
 									</span>
-									<a href="">
+									<a class="portamivia-2"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -105,9 +105,9 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-3"  src="" alt="" />
 									</span>
-									<a href="">
+									<a class="portamivia-3"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -116,10 +116,10 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-4"  src="" alt="" />
 									</span>
-									<a href="">
-										<h2>T</h2>
+									<a class="portamivia-4"  href="">
+										<h2></h2>
 										<div class="content">
 											<p></p>
 										</div>
@@ -127,9 +127,9 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-5"  src="" alt="" />
 									</span>
-									<a href="">
+									<a class="portamivia-5"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -138,9 +138,9 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-6"  src="" alt="" />
 									</span>
-									<a href="">
+									<a class="portamivia-6"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -149,9 +149,9 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-7"  src="" alt="" />
 									</span>
-									<a href="">
+									<a class="portamivia-7"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -160,9 +160,9 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-8"  src="" alt="" />
 									</span>
-									<a href="">
+									<a class="portamivia-8"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -171,9 +171,9 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-9"  src="" alt="" />
 									</span>
-									<a href="generic.html">
+									<a class="portamivia-9"  href="generic.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -182,9 +182,9 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-10"  src="" alt="" />
 									</span>
-									<a href="">
+									<a class="portamivia-10"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -193,9 +193,9 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-11"  src="" alt="" />
 									</span>
-									<a href="">
+									<a class="portamivia-11"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -204,9 +204,9 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="" alt="" />
+										<img id="img-12"  src="" alt="" />
 									</span>
-									<a href="">
+									<a class="portamivia-12"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
