--- a/index.html
+++ b/index.html
@@ -77,10 +77,20 @@
 
 
 
-
 							
 							<!-- in ititles ho le immagini -->
 							<section class="tiles">
+								<article class="">
+									<span class="image">
+										<img id="img-0"  src="" alt="" />
+									</span>
+									<a class="portamivia-0"  href="">
+										<h2></h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
 								<article class="">
 									<span class="image">
 										<img id="img-1"  src="" alt="" />
@@ -92,7 +102,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="">
 									<span class="image">
 										<img id="img-2"  src="" alt="" />
 									</span>
@@ -103,7 +113,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="">
 									<span class="image">
 										<img id="img-3"  src="" alt="" />
 									</span>
@@ -114,7 +124,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style4">
+								<article class="">
 									<span class="image">
 										<img id="img-4"  src="" alt="" />
 									</span>
@@ -125,7 +135,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style5">
+								<article class="">
 									<span class="image">
 										<img id="img-5"  src="" alt="" />
 									</span>
@@ -136,7 +146,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style6">
+								<article class="">
 									<span class="image">
 										<img id="img-6"  src="" alt="" />
 									</span>
@@ -147,7 +157,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="">
 									<span class="image">
 										<img id="img-7"  src="" alt="" />
 									</span>
@@ -158,29 +168,29 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="">
 									<span class="image">
 										<img id="img-8"  src="" alt="" />
 									</span>
-									<a class="portamivia-8"  href="">
+									<a class="portamivia-8"  href="generic.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+								<article class="">
 									<span class="image">
 										<img id="img-9"  src="" alt="" />
 									</span>
-									<a class="portamivia-9"  href="generic.html">
+									<a class="portamivia-9"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
 										</div>
 									</a>
 								</article>
-								<article class="style5">
+								<article class="">
 									<span class="image">
 										<img id="img-10"  src="" alt="" />
 									</span>
@@ -191,22 +201,11 @@
 										</div>
 									</a>
 								</article>
-								<article class="style6">
+								<article class="">
 									<span class="image">
 										<img id="img-11"  src="" alt="" />
 									</span>
 									<a class="portamivia-11"  href="">
-										<h2></h2>
-										<div class="content">
-											<p></p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img id="img-12"  src="" alt="" />
-									</span>
-									<a class="portamivia-12"  href="">
 										<h2></h2>
 										<div class="content">
 											<p></p>
