--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<span class="image">
 										<img id="img-0"  src="" alt="" />
 									</span>
-									<a class="portamivia-0"  href="">
+									<a class="portamivia-0"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
