--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Search product/a></li>
-							<li><a href="generic.html">Give me a random recipe</a></li>
+							<li><a href="#drogba">Search product</a></li>
+							<!-- <li><a href="">Give me a random recipe</a></li> -->
 							<!-- <li><a href="generic.html">Consequat dolor</a></li>
 							<li><a href="elements.html">Elements</a></li> -->
 						</ul>
@@ -61,7 +61,7 @@
 							</header>
 							
 							<!-- input ricerca -->
-					<div class="search">
+					<div id="drogba" class="search">
 						 <label for="groce">Look up:</label>
 						<!-- <input type="search" id="groce" placeholder="grocery item">
 						<button id="apibutton">Search</button> -->
@@ -95,7 +95,7 @@
 									<span class="image">
 										<img id="img-1"  src="" alt="" />
 									</span>
-									<a class="portamivia-1"  href="">
+									<a class="portamivia-1"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -106,7 +106,7 @@
 									<span class="image">
 										<img id="img-2"  src="" alt="" />
 									</span>
-									<a class="portamivia-2"  href="">
+									<a class="portamivia-2"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -117,7 +117,7 @@
 									<span class="image">
 										<img id="img-3"  src="" alt="" />
 									</span>
-									<a class="portamivia-3"  href="">
+									<a class="portamivia-3"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -128,7 +128,7 @@
 									<span class="image">
 										<img id="img-4"  src="" alt="" />
 									</span>
-									<a class="portamivia-4"  href="">
+									<a class="portamivia-4"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -139,7 +139,7 @@
 									<span class="image">
 										<img id="img-5"  src="" alt="" />
 									</span>
-									<a class="portamivia-5"  href="">
+									<a class="portamivia-5"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -150,7 +150,7 @@
 									<span class="image">
 										<img id="img-6"  src="" alt="" />
 									</span>
-									<a class="portamivia-6"  href="">
+									<a class="portamivia-6"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -161,7 +161,7 @@
 									<span class="image">
 										<img id="img-7"  src="" alt="" />
 									</span>
-									<a class="portamivia-7"  href="">
+									<a class="portamivia-7"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -172,7 +172,7 @@
 									<span class="image">
 										<img id="img-8"  src="" alt="" />
 									</span>
-									<a class="portamivia-8"  href="generic.html">
+									<a class="portamivia-8"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -183,7 +183,7 @@
 									<span class="image">
 										<img id="img-9"  src="" alt="" />
 									</span>
-									<a class="portamivia-9"  href="">
+									<a class="portamivia-9"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -194,7 +194,7 @@
 									<span class="image">
 										<img id="img-10"  src="" alt="" />
 									</span>
-									<a class="portamivia-10"  href="">
+									<a class="portamivia-10"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
@@ -205,7 +205,7 @@
 									<span class="image">
 										<img id="img-11"  src="" alt="" />
 									</span>
-									<a class="portamivia-11"  href="">
+									<a class="portamivia-11"  href="spec.html">
 										<h2></h2>
 										<div class="content">
 											<p></p>
